Fix some spacing issue with the width of a TreeGraph

--- a/simple-tree/src/index.css
+++ b/simple-tree/src/index.css
@@ -16,9 +16,7 @@ body {
     padding: 5px;
     border: 3px solid #FBED20;
 
-    box-shadow: 3px 3px #003DA6;
-     /* box-shadow: 5px 10px #888888; */
-   
+    box-shadow: 3px 3px #003DA6;   
 }
 
 .page {
@@ -29,11 +27,15 @@ body {
 #center-section {
     width: 95%;
     margin: auto;
+    text-align: center;
     background-color: #E4EDF9;
+    color: #003DA6;
+    text-shadow: 1px 1px  black;
 }
 
 #tree-canvas {
 
+    margin: auto;
     background-image: linear-gradient(#0046BE, #6280b4);
     border: 3px solid #FBED20;
 }
@@ -50,6 +52,4 @@ body {
     font-size: 80px;
     font-weight: bold;
     text-shadow: 5px 5px 5px black;
-   
-
 }
